[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beam-p2p"
version = "0.1.0"
description = "Shared Beam peer-to-peer protocol library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"cryptography>=41.0",
	"ecdsa>=0.19",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
